force-app/main/default/objects/Programs_Offered__c/Programs_Offered__c.object-meta.xml
<CustomObject>
    <label>Programs Offered</label>
    <nameField>
        <displayFormat>TCP{0000}</displayFormat>
        <label>TC-Prog Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Programs Offered</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>