force-app/main/default/objects/Programs_Offered__c/fields/House__c.field-meta.xml
<CustomField>
    <fullName>House__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>House</label>
    <referenceTo>House__c</referenceTo>
    <relationshipLabel>Programs_Offered</relationshipLabel>
    <relationshipName>Programs_Offered</relationshipName>
    <type>Lookup</type>
</CustomField>