force-app/main/default/objects/Programs_Offered__c/fields/Programs__c.field-meta.xml
<CustomField>
    <fullName>Programs__c</fullName>
    <label>Programs</label>
    <referenceTo>Programs__c</referenceTo>
    <relationshipLabel>Programs_Offered</relationshipLabel>
    <relationshipName>Associate_TC_and_Prog</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>