force-app/main/default/objects/Programs_Offered__c/fields/Rooms__c.field-meta.xml
<CustomField>
    <fullName>Rooms__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rooms</label>
    <referenceTo>Rooms__c</referenceTo>
    <relationshipLabel>Programs_Offered</relationshipLabel>
    <relationshipName>Programs_Offered</relationshipName>
    <type>Lookup</type>
</CustomField>