force-app/main/default/objects/Programs_Offered__c/fields/Treatment_Center__c.field-meta.xml
<CustomField>
    <fullName>Treatment_Center__c</fullName>
    <label>Treatment Center</label>
    <referenceTo>Treatment_Center__c</referenceTo>
    <relationshipLabel>Programs_Offered</relationshipLabel>
    <relationshipName>Associate_TC_and_Prog</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>